[ADD]  second design, added icons & stuff

--- a/UI/src/pages/home/home.html
+++ b/UI/src/pages/home/home.html
@@ -5,4 +5,5 @@
     <meta-data class="column" name="meta"></meta-data>
     <patient-output class="column" name="output"></patient-output>
   </div>
+  <img class="varian" height="36" width="138.4" src="../../assets/icon/varian.png">
 </ion-content>
