--- a/UI/src/index.html
+++ b/UI/src/index.html
@@ -52,6 +52,7 @@
     }
     mrFilename = 'https://storage.googleapis.com/junctionx/images/' + filename + 'MR.png';
     ctFilename = 'https://storage.googleapis.com/junctionx/images/' + filename + 'CT.png';
+    //mrVideoname = //'https://storage.googleapis.com/junctionx/videos/' + filename + 'MR.mp4';
 
     var img = document.createElement("img");
     img.src = mrFilename;
